force-app/main/default/objects/Account/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Account Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>