force-app/main/default/objects/Account/fields/ccrz__UsedByCloudcraze__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UsedByCloudcraze__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used by Cloudcraze Customer Portal</label>
    <type>Checkbox</type>
</CustomField>