force-app/main/default/objects/Account/fields/GYNCF_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_AccountGroup__c</fullName>
    <label>AccountGroup</label>
    <length>250</length>
    <type>Text</type>
</CustomField>