force-app/main/default/objects/Account/fields/GYNCF_Active__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Active</label>
    <type>Checkbox</type>
</CustomField>