force-app/main/default/objects/Account/fields/GYNCF_Name2__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Name2__c</fullName>
    <label>Name2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>