force-app/main/default/objects/Account/fields/GYNCF_Region__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CENTRAL</fullName>
            </value>
            <value>
                <fullName>EAST</fullName>
            </value>
            <value>
                <fullName>MID-WEST</fullName>
            </value>
            <value>
                <fullName>NORTH WEST</fullName>
            </value>
            <value>
                <fullName>SOUTH WEST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>