force-app/main/default/objects/Account/fields/GYNCF_SAP_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SAP_Created_Date__c</fullName>
    <label>SAP Created Date</label>
    <type>DateTime</type>
</CustomField>