force-app/main/default/objects/Account/fields/GYNCF_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SAP_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>