force-app/main/default/objects/Account/fields/VISITOR__c.field-meta.xml
<CustomField>
    <fullName>VISITOR__c</fullName>
    <label>VISITOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>