force-app/main/default/objects/Account/fields/ZZJACKLINKS__c.field-meta.xml
<CustomField>
    <fullName>ZZJACKLINKS__c</fullName>
    <label>ZZJACKLINKS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>