force-app/main/default/objects/Account/fields/ZZNEWFIELD__c.field-meta.xml
<CustomField>
    <fullName>ZZNEWFIELD__c</fullName>
    <label>ZZNEWFIELD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>