force-app/main/default/objects/Account/fields/ZZORDERMONITOR__c.field-meta.xml
<CustomField>
    <fullName>ZZORDERMONITOR__c</fullName>
    <label>ZZORDERMONITOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>