force-app/main/default/objects/Account/recordTypes/Ship_To.recordType-meta.xml
<RecordType>
    <fullName>Ship_To</fullName>
    <active>true</active>
    <label>Ship To</label>
</RecordType>