force-app/main/default/objects/Account/recordTypes/VpBusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>VpBusinessAccount</fullName>
    <active>false</active>
    <label>VpBusinessAccount</label>
</RecordType>