force-app/main/default/objects/Account/listViews/SAP_Accounts.listView-meta.xml
<ListView>
    <fullName>SAP_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GYNCF_SAP_Number__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GYNCF_SAP_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SAP Accounts</label>
</ListView>